style.css
* {
    margin: 0;
    padding: 0;
}

body {
    box-sizing: border-box;
    font-size: 10px;
    background: #F5F8FB;
    font-family: 'Montserrat', sans-serif;
    /* font-family: 'McLaren', cursive; */
    /* font-family: 'ZCOOL XiaoWei', serif; */
    /* font-family: 'Lakki Reddy', cursive; */
    /* font-family: 'Boogaloo', cursive; */
}

h1 {
    font-size: 1.3rem;
    color: #7C92A7;
}

.wrapper {
    display: flex;
    justify-content: space-between;
}


.sidebar {
    position: fixed;
    top:0;
    left: 0;
    width: 14rem;
    height:100%;
    background: white;
    -webkit-box-shadow: 12px 1px 35px -25px rgba(0, 0, 0, 0.51);
    -moz-box-shadow: 12px 1px 35px -25px rgba(0, 0, 0, 0.51);
    box-shadow: 12px 1px 35px -25px rgba(0, 0, 0, 0.51);
}
.sidebar-header {
    height: 3rem;
    text-align: center;
    margin-top: 0.5rem;
}
.sidebar-header span {
    color: #4FCDF5;
}
.sidebar-menu {
    text-align: left;
    margin-top: 2rem;
}
.sidebar-menu-inner {
    width: 80%;
    /* margin-left: 5%; */
}
.sidebar-menu-inner h1{
    margin-left: 1.2rem;
    font-size: 1rem;
}
.sidebar-menu ul {
    list-style: none;
    margin-top: 1rem;
}

.sidebar-menu ul li {
    text-align: left;
    width: 100%;
    padding: 1rem;
    font-size: .8rem;
    cursor: pointer;
}
.sidebar-menu ul li:nth-child(1) {
    border-left: 2px solid #4FCDF5;
    -webkit-box-shadow: 12px 1px 35px -12px rgba(0, 0, 0, 0.51);
    -moz-box-shadow: 12px 1px 35px -12px rgba(0, 0, 0, 0.51);
    box-shadow: 12px 1px 35px -12px rgba(0, 0, 0, 0.51);
}
.sidebar-menu ul li:nth-child(1) i {
    color: #4FCDF5;
    cursor: pointer;
}
.sidebar-menu ul li:not(:nth-child(1)){
    margin-left: .5rem;
    color:#575860;
    font-weight: bold;
}
.sidebar-menu ul li:not(:nth-child(1)) i{
    color:#90A3B5;
    margin-left: -.3rem;
}
.sidebar-menu ul li i {
    margin-right: .7rem;
    font-size: 1rem
}
.sidebar-menu ul li a {
    text-decoration: none;
    margin-top: .5rem;
    color: #5F5F68;
}
.sidebar-settings{
    margin-top: 4rem;
}
.sidebar-settings h1{
    margin-left: 1.2rem;
    font-size: 1rem;
}
.sidebar-settings ul {
    list-style: none;
    margin-top: .5rem;
}
.sidebar-settings ul li {
    text-align: left;
    width: 100%;
    font-size: .8rem;
    padding: 1rem;
    color:#575860;
    font-weight: bold;
}
.sidebar-settings ul li i {
    margin-right: .7rem;
    font-size: 1rem;
    color:#90A3B5;
}
.sidebar-settings ul li a {
    text-decoration: none;
    margin-top: .5rem;
    color: #5F5F68;
}

.content {
    width: 100rem;
    margin-left: 14.1rem;
    margin-top: 4rem;
}

.header-container {
    position: fixed;
    top:0;
    left: 14.1rem;
    width: 100%;
    display: flex;
    justify-content: space-between;
    z-index: 1;
    height: 3rem;
    background: white;
    -webkit-box-shadow: 12px 1px 35px -25px rgba(0, 0, 0, 0.51);
    -moz-box-shadow: 12px 1px 35px -25px rgba(0, 0, 0, 0.51);
    box-shadow: 12px 1px 35px -25px rgba(0, 0, 0, 0.51);
}

.header-container-left {
    margin: 1rem;
    display: flex;
}

.header-container-left i {
    margin: 0rem .7rem 0rem 0rem;
    color: #CED4DE;
    font-size: 1rem;
    cursor: pointer;
}

.header-container-left h2 {
    color: #4F5059;
    margin-top: -.2rem;
    user-select: none;
}

.header-container-right {
    padding: 0 2rem;
    margin: 1rem 15rem;
    display: flex;
}

.header-container-right i {
    /* padding: 0 .5rem; */
    color: #CED4DE;
    font-size: 1rem;
    margin: .1rem 1rem .3rem 0;
}

.header-container-right h3 {
    margin-top: -1rem;
    color: #6A6B73;
}

.header-container-right img {
    width: 2rem;
    height: 2rem;
    margin-top: -.5rem;
    margin-right: .5rem;
    object-fit: cover;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
}
.main{
    padding: 1rem;
    margin-bottom: 4rem;
    /* max-height: 500px; */

}
.main-content{
    display: flex;
    background: white;
}
.main-content-left{
    border-right: 1px solid #F9FAFC;
}
.main-content-left-header{
    height: 3rem;
    border-bottom: 1px solid #F9FAFC;
    width: 25rem;
}
.main-content-left-header ul{
    list-style: none;
    margin-left: 2rem;
}
.main-content-left-header ul li{
    list-style: none;
}
.main-content-left-header ul li a{
    float: left;
    text-decoration: none;
    padding: 1rem;
}
.easy{
    position: relative;
    color: #7D7D85;
    font-weight: bold;
}
.easy::after{
    content: '';
    position: absolute;
    width: 100%;
    height: 2px;
    left: 0;
    background: #7D7D85;
    bottom: -3px;
}
.advanced{
    color: #96A6B7;
    font-weight: bold;
}

.main-content-left-header ul li a i{
    margin-left: 10rem;
    color: #CBD2DB;
}
.main-content-left-fonts{
    display: flex;
    justify-content: space-between;
    padding: 1rem;
}

.main-content-left-fonts h2{
    color: #B6B7BA;
    margin-top: .48rem;
    display: inline-block;
}
.main-content-left-fonts i{
    color: #4FCDF5;
    font-size: 1.5rem;
    display: inline-block;
    cursor: pointer;
    margin-left: 0.1rem;
    transform: translateY(0.3rem);
    -webkit-transform: translateY(0.3rem);
    -moz-transform: translateY(0.3rem);
    -ms-transform: translateY(0.3rem);
    -o-transform: translateY(0.3rem);
}

.main-content-left-radio-button{
    position: relative;
    display: flex;
    justify-content: space-between;
    padding: 1rem;
}
.radio-container {
    display: block;
    position: relative;
    padding-left: 35px;
    margin-bottom: 12px;
    cursor: pointer;
    font-size: 1rem;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }
.radio-container input{
    opacity: 0;
    position: absolute;
    cursor: pointer;
}
.radio-btn{
    position: absolute;
    top: 0;
    left: 0;
    height: 15px;
    width: 15px;
    background: #E8ECF0;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
}
.radio-container:hover input ~ .radio-btn{
    background: #ccc;   
}

.radio-container input:checked ~ .radio-btn {
    background-color: #4FCDF5;
  }
.radio-btn:after {
    content: "";
    position: absolute;
    display: none;
}
.radio-container input:checked ~ .radio-btn:after {
    display: block;
}
.radio-container .radio-btn:after {
   top: 4.7px;
   left: 4.7px;
   width: 6px;
   height: 6px;
   border-radius: 50%;
   background: white;
}

 /* Checkbox section */
.checkbox-btn-container{
    margin: 1rem;
}
.checkbox-btn-container input{
    margin-right: .5rem;
}

.font-style-wrapper{
    padding: 1rem;
}
.font-style-grid{
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 3rem;
    margin-top: 1rem;
}
.font-style-left{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
.font-style-footer{
    padding: 1rem;
    
}
.font-style-footer-para{
    text-align: right;
    margin-right: 1.1rem;
}
.font-style-footer-para p{
    display: inline-block;
    font-size: .9rem;
    color: #B6B7BA;
}
.font-style-footer-para i{
    display: inline-block;
    font-size: .9rem;
    cursor: pointer;
}
.font-style-footer-button{
    margin-top: .5rem;
    text-align: center;
}
.font-style-footer-button button{
    width: 90%;
    padding: 1rem;
    font-size: .8rem;
    color: white;
    background: #4FCDF5;
    border: none;
    letter-spacing: .1rem;
    cursor: pointer;
    text-transform: uppercase;
}





 /* main content right section */
 .main-content-right{
    border-right: 1px solid #F9FAFC;
}
.main-content-right-header{
    height: 3rem;
    border-bottom: 1px solid #F9FAFC;
    width: 25rem;
}
.main-content-right-header ul{
    list-style: none;
    margin-left: 2rem;
}
.main-content-right-header ul li{
    list-style: none;
}
.main-content-right-header ul li a{
    float: left;
    text-decoration: none;
    padding: 1rem;
}
.text{
    position: relative;
    color: #7D7D85;
    font-weight: bold;
}
.text::after{
    content: '';
    position: absolute;
    width: 100%;
    height: 2px;
    left: 0;
    background: #7D7D85;
    bottom: -3px;
}
.styles{
    color: #96A6B7;
    font-weight: bold;
}

.main-content-right-container{
    padding: 2rem;
    display: flex;
    flex-direction: column;
    width: 80%;
}
.header-one{
    margin-top: .7rem;
}
.header-two{
    margin-top: .7rem;
}
.header-three{
    margin-top: .7rem;
}
.header-four{
    margin-top: 2rem;
}
.header-five{
    margin-top: 1rem;
}
.main-content-right-container h1{
    font-weight: bold;
    color: black;
    font-size: 4rem;
}
.main-content-right-container h2{
    font-weight: bold;
    color: black;
    font-size: 3rem;
}
.main-content-right-container .header-three h3{
    margin-left: -1rem;
    font-size: 1.5rem;
    line-height: 2rem;
}
.main-content-right-container .header-three p{
    font-size: .9rem;
    line-height: 1.5rem;
    color: #909196;
}
.main-content-right-container .header-four h4{
    font-size: 1.2rem;
    line-height: 1.9rem;
}
.main-content-right-container .header-four p{
    text-transform: uppercase;
    font-weight: bold;
    color: #C8C8CB;
}
.main-content-right-container .header-five p{
    font-size: .9rem;
    line-height: 1.5rem;
    color: #909196;
}




.footer-wrapper{
    display: flex;
    justify-content: space-between;
    height: 3rem;
    background: #FDFDFF;
    position: fixed;
    bottom: 0;
    left: 14.1rem;
    width: 100%;
    color: #CBD3DE;
    
}
.footer-wrapper-right {
    margin: 0 15rem;
}
.footer-wrapper p, h3{
    font-size: .8rem;
    padding: 1rem;
}

@media only screen and (max-width: 600px) {
    .content {
        width: 100rem;
        margin-left: 3rem;
        margin-top: 4rem;
    }
    .header-container {
        left: 3rem;
    }
    .header-container-right {
        padding: 0 2rem;
        margin: 1rem 3rem;
        display: flex;
    }
    .main-content{
        display: flex;
        flex-direction: column;
       justify-content: space-evenly;
    }
    .sidebar{
        width: 3.5rem;
    }
    .sidebar ul li a, h1{
        display: none;
    }
    .sidebar-menu ul li {
        text-align: left;
        width: 50%;
    }
    .footer-wrapper{
        left: 3rem;
    }
    .footer-wrapper-right {
        margin: 0 10rem;
    } 
  }

